# bofa

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bofa.example.toml  flake.nix
.github/: bofa.toml
.github/workflows/: bofa.yml  ci.yml  release-plz.yml
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/src/: action.rs  config.rs  git.rs  lib.rs  logging.rs  scanner.rs  templates.rs
lib/src/action/: comment_marker.rs
lib/src/action/check/: mod.rs  pr.rs
lib/src/action/triage/: mod.rs  pr.rs
lib/src/config/: credentials.rs  log.rs  repository.rs  scanner.rs  template.rs  worker.rs
lib/src/config/scanner/: sensitive.rs  triage.rs
lib/src/git/: backend.rs  context.rs
lib/src/git/backend/: dry_run.rs  github.rs  mock.rs
lib/src/scanner/: sensitive.rs  triage.rs
lib/src/templates/: check_pr.tera  check_pr_empty.tera  comment_footnote.tera  triage_pr.tera
lib/tests/: check_pr.rs  login.rs
