[workspace]
resolver = "3"
members = ["bin/bofa-cli", "lib"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
snapbox = { version = "1.2.2", features = ["cmd"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
