[workspace]
resolver = "3"
members = ["bin/bofa-cli", "lib"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Embers-of-the-Fire/bofa"

[workspace.dependencies]
bofa-lib = { version = "0.2.0", path = "lib" }

async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
jsonwebtoken = "10.4"
octocrab = "0.54.0"
serde = { version = "1.0.228", features = ["derive"] }
snapbox = { version = "1.2.2", features = ["cmd"] }
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
