[package]
name = "bofa-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.54.0"
jsonwebtoken = "10.4"
base64 = "0.22"
thiserror = "2"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true }
toml = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
