[package]
name = "bofa-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for scanning GitHub pull requests for sensitive file changes and posting templated comment reports"
readme = "README.md"
keywords = ["github", "pr-scanner", "code-review", "bot", "ci"]
categories = ["development-tools", "api-bindings"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
glob.workspace = true
indexmap.workspace = true
jsonwebtoken.workspace = true
octocrab.workspace = true
serde.workspace = true
tera.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
